# py_web_HW14

./: .env_example  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: a3ed16dac74f_init.py  c5570ed2f005_add_user.py  d70f8eab3094_upd_models_user.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py  seeds.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
templates/: index.html
tests/: test_unit_repository_contacts.py
